# example-googletest-with-cmake

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
src/: factorial.cpp  factorial.h  main.cpp
test/: test_factorial.cpp
